--- a/P007996.opf/meta.yml
+++ b/P007996.opf/meta.yml
@@ -1,16 +1,17 @@
-id: opecha:P007996
+id: P007996
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG24859
   title: ལེགས་འགྲུབ་ཡོང་བ་ཇི་ལྟར་བྱེད། རི་མོའི་ལམ་ནས་པིར་ཀའི་ཚིའི་སྐོར་གླེང་བ།
-  volume:
+  author: ''
+  volumes:
     2fcb4b7523774045b0e845d094302210:
       image_group_id: I1KG24861
       title: Volume 1 of legs 'grub yong ba ji ltar byed/_ri mo'i lam nas pir ka'i
         tshi'i skor gleng ba/
       volume_number: 1
       total_pages: 188
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: ལེགས་འགྲུབ་ཡོང་བ་ཇི་ལྟར་བྱེད། རི་མོའི་ལམ་ནས་པིར་ཀའི་ཚིའི་སྐོར་གླེང་བ།
   author: ''
