--- a/P007996.opf/meta.yml
+++ b/P007996.opf/meta.yml
@@ -5,13 +5,11 @@ source_metadata:
   title: ལེགས་འགྲུབ་ཡོང་བ་ཇི་ལྟར་བྱེད། རི་མོའི་ལམ་ནས་པིར་ཀའི་ཚིའི་སྐོར་གླེང་བ།
   author: ''
   volumes:
-    2fcb4b7523774045b0e845d094302210:
+    9cb4ca6090994723968e9f923685bad7:
       image_group_id: I1KG24861
-      title: Volume 1 of legs 'grub yong ba ji ltar byed/_ri mo'i lam nas pir ka'i
-        tshi'i skor gleng ba/
+      title: ''
       volume_number: 1
       total_pages: 188
-      base_file: v001.txt
 ebook_metadata:
   title: ལེགས་འགྲུབ་ཡོང་བ་ཇི་ལྟར་བྱེད། རི་མོའི་ལམ་ནས་པིར་ཀའི་ཚིའི་སྐོར་གླེང་བ།
   author: ''
