--- a/P007996.opf/layers/v001/Pagination.yml
+++ b/P007996.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b55f5c0702634a6a9b65175f7a65cdf4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1d7f25b4782a46fe83c13558d3ce9b1f:
