added created_at and last_modified_at in metadata

--- a/P007996.opf/meta.yml
+++ b/P007996.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P007996
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG24859
   title: ལེགས་འགྲུབ་ཡོང་བ་ཇི་ལྟར་བྱེད། རི་མོའི་ལམ་ནས་པིར་ཀའི་ཚིའི་སྐོར་གླེང་བ།
@@ -12,10 +14,3 @@ source_metadata:
       volume_number: 1
       total_pages: 188
       base_file: v001.txt
-ebook_metadata:
-  title: ལེགས་འགྲུབ་ཡོང་བ་ཇི་ལྟར་བྱེད། རི་མོའི་ལམ་ནས་པིར་ཀའི་ཚིའི་སྐོར་གླེང་བ།
-  author: ''
-  sku: P007996
-  cover: cover.jpg
-  layers:
-  - pagination
