--- a/P007996.opf/meta.yml
+++ b/P007996.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007996
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:54:02.925578
 source_metadata:
   id: bdr:W1KG24859
   title: ལེགས་འགྲུབ་ཡོང་བ་ཇི་ལྟར་བྱེད། རི་མོའི་ལམ་ནས་པིར་ཀའི་ཚིའི་སྐོར་གླེང་བ།
@@ -14,3 +14,5 @@ source_metadata:
       volume_number: 1
       total_pages: 188
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
